updated sched service api & added feature stored execution & fixed some bugs
