# api/openapi/sched.yaml
@@ -5,7 +5,7 @@ info:
   contact: {}
   description: job scheduler API
 servers:
-  - url: "http://localhost:3000"
+  - url: "http://localhost:3000/v1"
 paths:
   /jobs:
     get:
@@ -210,6 +210,9 @@ components:
           type: string
         finished_at:
           type: string
+      required:
+        - id
+        - job_id
     Executor:
       title: Executor
       type: object
